# AgentSandboxEnvironments

./: .gitignore  README.md  api.py  cli.py  poll.py  pyproject.toml
environments/: __init__.py  docker.py  enroot.py  singularity.py
environments/extra/: bubblewrap.py
runners/: base.py  local.py  slurm.py
tests/: test_api.py  test_runners.py
